# space_soup_editor

./: .gitignore  Cargo.toml  api.txt
.claude/worktrees/: agate  game  space_soup  space_soup_engine
src/: main.rs  network.rs  scene_3d.rs  text_editor.rs  text_panels.rs  theme.rs
src/app/: anim_sim_editor.rs  discover.rs  edit_camera.rs  grab_pose_editor.rs  layout.rs  mod.rs  nav.rs  object_preview.rs  orbit_camera.rs  picking.rs  scene_bridge.rs  setup.rs  snap.rs
src/app/input/: gesture.rs  keyboard.rs  mod.rs  mouse.rs  resize.rs
src/app/render/: anim_sim_panel.rs  confirm.rs  grab_pose_panel.rs  inspector.rs  mod.rs  navigator.rs  object_preview_panel.rs  ribbon.rs  scene.rs  statusbar.rs  toolbar.rs  viewport_overlay.rs
src/transform_gizmo/: assets.rs  colors.rs  drag.rs  geometry.rs  glb.rs  math.rs  mod.rs  picking.rs  render.rs
